--- a/spade/static/css/styles.css
+++ b/spade/static/css/styles.css
@@ -36,20 +36,23 @@ body {
 .container {
     position: relative;
     z-index: 1;
-    max-width: 500px;
-    margin: 150px auto;
+    max-width: 600px;
+    margin: 125px auto;
     text-align: center;
-    color: white;
+    color: #ffffff;
 }
 
 .container h1 {
-    font-size: 36px;
+    font-size: 4vw;
     margin-bottom: 20px;
+    white-space: nowrap;
+    width: 100%;  /* Ensure the width spans the container */
+    text-align: center;  /* Center the text */
 }
 
 /* Form container styling */
 .form-container {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: hsla(0, 0%, 0%, 0.6);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -60,11 +63,11 @@ body {
 .tabs {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 20px;
 }
 
 .tab {
-    background-color: #ccc;
+    background-color: #6d006d;
+    color: white;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
@@ -75,8 +78,12 @@ body {
 }
 
 .tab.active {
-    background-color: #333;
+    background-color: #a600a6;
     color: white;
+}
+
+.tab:hover {
+    background-color: #a600a6;
 }
 
 /* Form content styling */
@@ -93,25 +100,49 @@ body {
     flex-direction: column;
 }
 
-.form-content form input,
-.form-content form button {
-    margin-bottom: 10px;
-    padding: 10px;
+.form-content form label {
+    color: white;
+    font-size: 16px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.form-content form input {
+    padding: 12px;
     font-size: 16px;
     border-radius: 5px;
     border: 1px solid #ccc;
     width: 100%;
+    margin-bottom: 5px;
+    box-sizing: border-box;
 }
 
+/* Style for the instructional text below the input fields */
+.form-content form {
+    font-size: 0.8vw;  /* Smaller font size for informational text */
+    color: #a600a6;  /* Lighter color for informational text */
+}
+
+/* If using unordered lists for bullet points */
+.form-content form ul {
+    padding-left: 20px;  /* Add padding to the left to match the form container's padding */
+    margin: 0;
+}
+
+/* Style for the submit button */
 .form-content form button {
-    background-color: #333;
+    background-color: #6d006d;
     color: white;
     border: none;
     cursor: pointer;
+    font-size: 16px;
+    padding: 12px;
+    margin-top: 20px;  /* Add margin above the submit button */
 }
 
 .form-content form button:hover {
-    background-color: #555;
+    background-color: #a600a6;
 }
 
 /* Header styling */
@@ -124,13 +155,19 @@ body {
     right: 0;
     z-index: 1000;
     border-radius: 20px; /* Rounded corners */
-    margin: 20px;
+    margin: 25px;
+    max-height: 75px;
 }
 
 .header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+}
+
+.main-nav {
+    flex: 1;
 }
 
 .main-nav ul {
@@ -146,25 +183,31 @@ body {
 }
 
 .main-nav a:hover {
-    color: #cc0000; /* Red on hover */
+    color: #ff3385; /* Red on hover */
 }
 
-.logo a {
-    color: white;
-    font-size: 24px;
-    text-decoration: none;
-    font-weight: bold;
-    text-align: center;
+/* Centering the logo */
+.logo {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+}
+
+.logo img {
+    width: auto;
+    height: 55px;
+}
+
+/* Account button on the right */
+.account {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1;
 }
 
 .account img {
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-}
-
-.home-page .content {
-    margin-top: 0;
+    width: auto;
+    height: 55px;
 }
 
 /* Home Styling */
@@ -172,9 +215,19 @@ body {
     position: relative;
     width: 100%;
     height: 100vh; /* Full viewport height */
-    background-size: cover;
-    background-position: center;
+    overflow: hidden; /* Ensure the video does not overflow the container */
+}
+
+.video-background {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: calc(100vw + 100px);  /* Add 100px to width (50px on each side) */
+    height: calc(100vh + 150px); /* Add 100px to height (50px on each side) */
+    transform: translate(-50%, -50%);
     z-index: -1;
+    pointer-events: none; /* Ensures the video doesn't interfere with clicking on content */
+    object-fit: fill;
 }
 
 .overlay {
@@ -183,7 +236,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0);
     z-index: 0;
 }
 
@@ -198,16 +251,164 @@ body {
 }
 
 .home-text h1 {
-    font-size: 48px;
+    font-size: 5vw;
     font-weight: bold;
+    white-space: nowrap;
 }
 
 .home-text h2 {
-    font-size: 24px;
+    font-size: 1.5vw; /* Responsive font size based on viewport width */
     margin-top: 10px;
+    white-space: nowrap; /* Prevents the text from wrapping */
 }
 
-/* Catalog Background */
+.explore-button {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 2vw;
+    color: white;
+    background-color: #6d006d; /* Button background color */
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.explore-button:hover {
+    background-color: #a6006d; /* Button background color on hover */
+}
+
+/* Account Styling */
+.account-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    z-index: -2;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: -1;
+}
+
+.account-details {
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 25px;
+    border-radius: 10px;
+    max-width: calc(100% - 50px); /* Full width minus 50px margin */
+    height: calc(100vh - 150px);  /* Full height minus top and bottom margins */
+    margin: 125px 25px 25px 25px;
+    color: white;
+    box-sizing: border-box;
+}
+
+.account-details h1 {
+    margin-bottom: 30px;
+    font-size: 28px;
+    text-align: center;
+}
+
+.account-details form {
+    margin-bottom: 20px;
+}
+
+.account-details label {
+    font-size: 16px;
+    margin-bottom: 10px;
+    display: block;
+}
+
+.account-details input {
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 100%;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+
+.account-details button {
+    background-color: #6d006d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 20px;
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+}
+
+.account-details button:hover {
+    background-color: #a600a6;
+}
+
+.logout-button {
+    background-color: #ff3333; /* Red color for logout */
+}
+
+.logout-button:hover {
+    background-color: #ff0000;
+}
+
+.admin-button {
+    background-color: #6d006d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 10px;
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+}
+
+.admin-button:hover {
+    background-color: #a600a6;
+}
+
+/* Style for the password change section */
+.password-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.password-section input {
+    flex-grow: 1;
+    margin-right: 10px;
+}
+
+.password-section button {
+    background-color: #6d006d;
+    border: none;
+    color: white;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.password-section button:hover {
+    background-color: #a600a6;
+}
+
+/* Catalog Styling */
 .catalog-background {
     position: fixed; /* Fixes the background to the viewport */
     top: 0;
