--- a/spade/templates/account.html
+++ b/spade/templates/account.html
@@ -1,12 +1,47 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %}Account - SPADE{% endblock %}
 
 {% block content %}
-<h1>Account Information</h1>
-<div class="account-details">
-    <p>Name: John Doe</p>
-    <p>Email: johndoe@example.com</p>
-    <!-- You can add more user information here -->
+
+<div class="account-background" style="background-image: url('{% static 'images/account-background.png' %}');">
+    <div class="overlay"></div>
+    <div class="account-details">
+        <h1>Account Information</h1>
+        <form method="post">
+            {% csrf_token %}
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" value="{{ user.username }}" readonly>
+
+            <label for="first_name">First Name:</label>
+            <input type="text" id="first_name" name="first_name" value="{{ user.first_name }}">
+
+            <label for="last_name">Last Name:</label>
+            <input type="text" id="last_name" name="last_name" value="{{ user.last_name }}">
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" value="{{ user.email }}">
+
+            <div class="password-section">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" value="********" readonly>
+                <button type="button">Change Password</button>
+            </div>
+
+            <button type="submit">Update Information</button>
+
+            {% if user.is_staff %}
+                <a href="/admin/" class="admin-button">Go to Admin Page</a>
+            {% endif %}
+        </form>
+
+        <form method="post" action="{% url 'logout' %}">
+            {% csrf_token %}
+            <button type="submit" class="logout-button">Log Out</button>
+        </form>
+    </div>
 </div>
+
 {% endblock %}
