--- a/spade/core/templates/base.html
+++ b/spade/core/templates/base.html
@@ -14,7 +14,9 @@
                 <ul>
                     <li><a href="{% url 'catalog' %}">Catalog</a></li>
                     <li><a href="{% url 'leaderboards' %}">Leaderboards</a></li>
-                    <li><a href="{% url 'social' %}">Social</a></li>
+                    {% if user.is_staff %}
+                        <li><a href="{% url 'develop' %}">Develop</a></li>
+                    {% endif %}
                 </ul>
             </nav>
             <div class="logo">
