--- a/spade/static/css/home_styles.css
+++ b/spade/static/css/home_styles.css
@@ -63,5 +63,5 @@
 }
 
 .explore-button:hover {
-    background-color: #a6006d; /* Button background color on hover */
+    background-color: #a600a6; /* Button background color on hover */
 }
